增加 一些知识点