@@ -1,6 +1,6 @@
 # JVM
 
-## 内存与垃圾回收
+# 内存与垃圾回收
 
 - JVM和Java体系结构
 - 类加载子系统
@@ -21,15 +21,15 @@
 
 
 
-### JVM和Java体系结构
+## JVM和Java体系结构
 
-#### JVM文档
+### JVM文档
 
 https://docs.oracle.com/javase/specs/
 
 
 
-#### 各种语言的排名
+### 各种语言的排名
 
 世界上没有最好的语言，只有适合某种场景的最好的语言。
 
@@ -37,7 +37,7 @@ https://www.tiobe.com/tiobe-index/
 
 
 
-#### JVM跨语言的平台
+### JVM跨语言的平台
 
 JVM只关心，字节码文件是不是符合他的要求。
 
@@ -45,13 +45,13 @@ Java不是最强大的语言，但是JVM是最强大的虚拟机。
 
 ![image-20201116231542300](../media/pictures/JVM.assets/image-20201116231542300.png)
 
-#### JVM作用
+### JVM作用
 
 JVM就是二进制字节码的运行环境。
 
 
 
-#### 特点
+### 特点
 
 - 一次编译，到处运行
 - 自动内存管理
@@ -59,7 +59,7 @@ JVM就是二进制字节码的运行环境。
 
 
 
-#### JVM架构模型  （不会 计算机组成原理 汇编知识）
+### JVM架构模型  （不会 计算机组成原理 汇编知识）
 
 参考PPT 39
 
@@ -103,7 +103,7 @@ public class StackStruTest {
 
 
 
-#### JVM生命周期
+### JVM生命周期
 
 开始 执行 结束
 
@@ -113,7 +113,7 @@ public class StackStruTest {
 
 
 
-#### JVM发展历程
+### JVM发展历程
 
 Java是半解释，半编译形语言。
 
@@ -123,7 +123,7 @@ JIT执行编译器，参考：https://developer.ibm.com/zh/articles/j-lo-just-in
 
 热点代码（经常执行的代码），编译器会编译成字节码文件，缓存起来。
 
-##### Sun Classic VM
+#### Sun Classic VM
 
 最开始的时候，解释器和编译器不能同时运行。
 
@@ -143,7 +143,7 @@ JIT执行编译器，参考：https://developer.ibm.com/zh/articles/j-lo-just-in
 
 
 
-##### Exact VM
+#### Exact VM
 
 - 热点探测
 
@@ -151,7 +151,7 @@ JIT执行编译器，参考：https://developer.ibm.com/zh/articles/j-lo-just-in
 
 
 
-##### Sun HotSpot VM 商用 目前属于Oracle
+#### Sun HotSpot VM 商用 目前属于Oracle
 
 名称上指的是热点探测技术。
 
@@ -160,7 +160,7 @@ JIT执行编译器，参考：https://developer.ibm.com/zh/articles/j-lo-just-in
 
 
 
-##### BEA JRockit 商用 目前属于Oracle
+#### BEA JRockit 商用 目前属于Oracle
 
 专注于服务器应用。
 
@@ -170,7 +170,7 @@ JIT执行编译器，参考：https://developer.ibm.com/zh/articles/j-lo-just-in
 
 
 
-##### IBM J9 商用 
+#### IBM J9 商用 
 
 这三个是目前世界范围内最具有影响力的三大商用虚拟机。
 
@@ -178,19 +178,19 @@ JIT执行编译器，参考：https://developer.ibm.com/zh/articles/j-lo-just-in
 
 
 
-##### KVM 和 CDC/CLDC HotSpot
+#### KVM 和 CDC/CLDC HotSpot
 
 主要用于Java ME
 
 
 
-##### Azul VM
+#### Azul VM
 
 高性能虚拟机中的战斗机。
 
 
 
-##### Liquid VM
+#### Liquid VM
 
 高性能虚拟机中的战斗机。
 
@@ -198,7 +198,7 @@ JIT执行编译器，参考：https://developer.ibm.com/zh/articles/j-lo-just-in
 
 
 
-##### Apache Harmony
+#### Apache Harmony
 
 Intel和IBM联合开发的开源JVM。但是Sun坚决不让Harmony获得JCP（目前管理Java的组织）的认证。
 
@@ -206,13 +206,13 @@ Intel和IBM联合开发的开源JVM。但是Sun坚决不让Harmony获得JCP（�
 
 
 
-##### MicroSoft JVM
+#### MicroSoft JVM
 
 微软未来在浏览器中只是Java Applets ，开发了这个。只能在wins系统用。
 
 
 
-##### TaobaoJVM
+#### TaobaoJVM
 
 基于OpenJDK深度定制的
 
@@ -221,7 +221,7 @@ Intel和IBM联合开发的开源JVM。但是Sun坚决不让Harmony获得JCP（�
 
 
 
-##### Dalvik VM
+#### Dalvik VM
 
 不是遵循Java JVM规范，不能直接执行Java class文件。
 
@@ -229,7 +229,7 @@ Intel和IBM联合开发的开源JVM。但是Sun坚决不让Harmony获得JCP（�
 
 
 
-##### Graal VM 未来虚拟机
+#### Graal VM 未来虚拟机
 
 2018 Oracle新发布的虚拟机。
 
@@ -239,7 +239,7 @@ Run Programs Faster Anywhere.
 
 
 
-### 类加载子系统
+## 类加载子系统
 
 ![image-20201119141420468](../media/pictures/JVM.assets/image-20201119141420468.png)
 
@@ -249,7 +249,7 @@ Run Programs Faster Anywhere.
 
 
 
-#### 类的加载过程
+### 类的加载过程
 
 宏观上的加载
 
@@ -259,39 +259,39 @@ Run Programs Faster Anywhere.
 
 微观上的加载，分三个环节
 
-##### 加载 Loading
+#### 加载 Loading
 
 ![image-20201119143645366](../media/pictures/JVM.assets/image-20201119143645366.png)
 
 
 
-##### 链接 Linking
+#### 链接 Linking
 
-###### 验证
+##### 验证
 
 保证被加载的正确定，不能危害自己安全。
 
 
 
-###### 准备
+##### 准备
 
 给变量赋值，开始都是初始值，0值。
 
 
 
-###### 解析
+##### 解析
 
 将常量池中符号引用转换为直接引用。
 
 
 
-##### 初始化 Init
+#### 初始化 Init
 
 ![image-20201119162159712](../media/pictures/JVM.assets/image-20201119162159712.png)
 
 
 
-#### 类加载器分类
+### 类加载器分类
 
 <img src="../media/pictures/JVM.assets/image-20201119162420925.png" alt="image-20201119162420925"  />
 
@@ -354,7 +354,7 @@ null
 
 
 
-#### 虚拟机自带的加载器
+### 虚拟机自带的加载器
 
 ![image-20201119164809103](../media/pictures/JVM.assets/image-20201119164809103.png)
 
@@ -368,7 +368,7 @@ null
 
 
 
-#### 自定义类加载
+### 自定义类加载
 
 ![image-20201120093128264](../media/pictures/JVM.assets/image-20201120093128264.png)
 
@@ -415,7 +415,7 @@ public class CustomClassLoader extends ClassLoader {
 
 
 
-#### ClassLoader
+### ClassLoader
 
 获取ClassLoader几种方式：
 
@@ -423,7 +423,7 @@ public class CustomClassLoader extends ClassLoader {
 
 
 
-#### 双亲委派机制 面试要问
+### 双亲委派机制 面试要问
 
 ![image-20201120100225986](../media/pictures/JVM.assets/image-20201120100225986.png)
 
@@ -477,13 +477,13 @@ public class StringTest {
 
 
 
-##### 优势
+#### 优势
 
 ![image-20201120101737457](../media/pictures/JVM.assets/image-20201120101737457.png)
 
 
 
-#### 沙箱安全机制
+### 沙箱安全机制
 
 类加载器的这种委派模式就是一种沙箱安全机制，会对核心API有保护作用。
 
@@ -491,7 +491,7 @@ public class StringTest {
 
 
 
-#### 其他重要知识
+### 其他重要知识
 
 ##### 两个class对象是都为同一个类
 
@@ -505,9 +505,9 @@ public class StringTest {
 
 
 
-### 运行时数据区
+## 运行时数据区
 
-#### 概述
+### 概述
 
 ![image-20201120105050051](../media/pictures/JVM.assets/image-20201120105050051.png)
 
@@ -519,21 +519,21 @@ public class StringTest {
 
 
 
-#### 线程
+### 线程
 
 ![image-20201120110351418](../media/pictures/JVM.assets/image-20201120110351418.png)
 
 
 
-##### JVM系统线程
+#### JVM系统线程
 
 ![image-20201120110526452](../media/pictures/JVM.assets/image-20201120110526452.png)
 
 
 
-### 程序计数器 （PC寄存器）
+## 程序计数器 （PC寄存器）
 
-#### PC 寄存器介绍
+### PC 寄存器介绍
 
 ![image-20201120111026034](../media/pictures/JVM.assets/image-20201120111026034.png)
 
@@ -543,7 +543,7 @@ public class StringTest {
 
 这个地方不会发生OOM，也没有GC。
 
-##### 举例子
+#### 举例子
 
 ![image-20201120132451871](../media/pictures/JVM.assets/image-20201120132451871.png)
 
@@ -555,7 +555,7 @@ public class StringTest {
 
 
 
-#### 两个常见问题
+### 两个常见问题
 
 ![image-20201120140521559](../media/pictures/JVM.assets/image-20201120140521559.png)
 
@@ -576,7 +576,7 @@ public class StringTest {
 
 
 
-#### CPU时间片
+### CPU时间片
 
 ![image-20201120141452769](../media/pictures/JVM.assets/image-20201120141452769.png)
 
@@ -584,21 +584,21 @@ public class StringTest {
 
 
 
-### 虚拟机栈
+## 虚拟机栈
 
-#### 概述背景概述
+### 概述背景概述
 
 ![image-20201120142459185](../media/pictures/JVM.assets/image-20201120142459185.png)
 
 
 
-##### 内存中的堆和栈
+#### 内存中的堆和栈
 
 ![image-20201120142432235](../media/pictures/JVM.assets/image-20201120142432235.png)
 
 
 
-##### 虚拟机栈的基本内容
+#### 虚拟机栈的基本内容
 
 ![image-20201120142550908](../media/pictures/JVM.assets/image-20201120142550908.png)
 
@@ -624,7 +624,7 @@ public class StringTest {
 
 
 
-##### 设置栈内存大小
+#### 设置栈内存大小
 
 -Xss 设置线程的最大栈空间，栈的大小直接决定了函数调用的最大可达深度。
 
@@ -640,13 +640,13 @@ IDEA设置虚拟机栈大小：
 
 
 
-#### 栈的存储单位
+### 栈的存储单位
 
 <img src="../media/pictures/JVM.assets/image-20201120153247163.png" alt="image-20201120153247163" style="zoom:40%;" />
 
 
 
-##### 栈运行原理
+#### 栈运行原理
 
 ![image-20201120153749427](../media/pictures/JVM.assets/image-20201120153749427.png)
 
@@ -672,7 +672,7 @@ Debug的时候，可以看到栈
 
 
 
-##### 栈帧内部结构
+#### 栈帧内部结构
 
 <img src="../media/pictures/JVM.assets/image-20201120161010077.png" alt="image-20201120161010077" style="zoom:50%;" />
 
@@ -680,111 +680,2282 @@ Debug的时候，可以看到栈
 
 ### 栈的局部变量表
 
-![image-20201120161940943](../media/pictures/JVM.assets/image-20201120161940943.png)
+<img src="../media/pictures/JVM.assets/image-20201120161940943.png" alt="image-20201120161940943" style="zoom: 33%;" />
 
 
 
-![image-20201120162124503](../media/pictures/JVM.assets/image-20201120162124503.png)
+<img src="../media/pictures/JVM.assets/image-20201120162124503.png" alt="image-20201120162124503" style="zoom:33%;" />
 
 
 
+```bash
+cd out/production/chapter05/com/atguigu/java1/
 
+#看字节码里面细节
+javap -v LocalVariablesTest.class
+```
 
+这个里面有堆栈，参数信息等：
 
+<img src="../media/pictures/JVM.assets/image-20201126090909485.png" alt="image-20201126090909485" style="zoom: 50%;" />
 
 
 
+#### 用JClassLib看具体一个类的信息
 
+LocalVariablesTest.class
 
+<img src="../media/pictures/JVM.assets/image-20201126092238140.png" alt="image-20201126092238140" style="zoom:50%;" />
 
+<img src="../media/pictures/JVM.assets/image-20201126092646904.png" alt="image-20201126092646904" style="zoom:50%;" />
 
+<img src="../media/pictures/JVM.assets/image-20201126091851710.png" alt="image-20201126091851710" style="zoom:50%;" />
 
+<img src="../media/pictures/JVM.assets/image-20201126092111443.png" alt="image-20201126092111443" style="zoom:50%;" />
 
+分析：
 
+- test变量，其实PC对应行号是14，这是他作用域开始的行；
+- 起始PC + 长度 都是16，这个16其实就是第二张图，字节码长度16
+- 局部变量最大槽数3，就是说这个方法中有三个变量，分别是args，test，num
 
 
 
+#### 关于Slot(槽)的理解
 
+![image-20201126100707224](../media/pictures/JVM.assets/image-20201126100707224.png)
 
+如何理解上面最后那一句话呢？下面代码示例展示。
 
+##### 静态方法和构造方法
 
+代码示例()：
 
+<img src="../media/pictures/JVM.assets/image-20201126100837311.png" alt="image-20201126100837311" style="zoom: 67%;" />
 
+```java
+public static void testStatic() {
+		LocalVariablesTest test = new LocalVariablesTest();
+		Date date = new Date();
+		int count = 10;
+		System.out.println(count);
+		//因为this变量不存在于当前方法的局部变量表中！！
+		//System.out.println(this.count);
+	}
 
+	//关于Slot的使用的理解
+	public LocalVariablesTest() {
+		this.count = 1;
+	}
+```
 
+在testStatic方法中是用不了this关键字的，但是在构造方法中是可以用的。
 
+解析：
 
+构造方法就是初始化方法，局部变量表有他，所以可以用
 
+<img src="../media/pictures/JVM.assets/image-20201126101157921.png" alt="image-20201126101157921" style="zoom:67%;" />
 
+再看testStatic方法，局部变量表中没有this，肯定用不了它喽!
 
+<img src="../media/pictures/JVM.assets/image-20201126101247753.png" alt="image-20201126101247753" style="zoom:67%;" />
 
+##### 非静态方法
 
+this变量就在局部变量表的第一个，代码示例：
 
+```java
+public void test1() {
+    Date date = new Date();
+    String name1 = "atguigu.com";
+    test2(date, name1);
+    System.out.println(date + name1);
+}
+```
 
+<img src="../media/pictures/JVM.assets/image-20201126101903918.png" alt="image-20201126101903918" style="zoom:67%;" />
 
 
 
+##### 各种类型，含double类型，占两个槽
 
+```java
+public String test2(Date dateP, String name2) {
+    dateP = null;
+    name2 = "songhongkang";
+    double weight = 130.5;//占据两个slot
+    char gender = '男';
+    return dateP + name2;
+}
+```
 
+这里面其实有五个变量。但是有6个槽
 
+<img src="../media/pictures/JVM.assets/image-20201126102744386.png" alt="image-20201126102744386" style="zoom:67%;" />
 
+体重这个变量占了两个槽，序号是3（第四个位置），序号4（第五个位置）也被他占用啦。
 
+<img src="../media/pictures/JVM.assets/image-20201126102833722.png" alt="image-20201126102833722" style="zoom:67%;" />
 
 
 
+#### Slot的重复利用
 
+```java
+public void test4() {
+    int a = 0;
+    {
+        int b = 0;
+        b = a + 1;
+    }
+    //变量c使用之前已经销毁的变量b占据的slot的位置
+    int c = a + 1;
+}
+```
 
+<img src="../media/pictures/JVM.assets/image-20201126104819057.png" alt="image-20201126104819057" style="zoom:67%;" />
 
+在这个代码中，变量b为什么和变量c序号一样（就是占用槽其实位置一样）？？？
 
+因为变量b，有效范围就是大括号之内，大括号完结，变量b原来的地方会被c重新利用。（妙啊！）
 
 
 
+#### 静态变量和局部变量的对比
 
+<img src="../media/pictures/JVM.assets/image-20201126105753011.png" alt="image-20201126105753011" style="zoom: 33%;" />
 
+补充：
 
+<img src="../media/pictures/JVM.assets/image-20201126110301456.png" alt="image-20201126110301456" style="zoom: 33%;" />
 
+### 操作数栈
 
+Operand Stack
 
+栈：实现可以用数组或者链表来实现。
 
+<img src="../media/pictures/JVM.assets/image-20201126111248667.png" alt="image-20201126111248667" style="zoom: 33%;" />
 
+<img src="../media/pictures/JVM.assets/image-20201126111916720.png" alt="image-20201126111916720" style="zoom: 33%;" />
 
+<img src="../media/pictures/JVM.assets/image-20201126112309105.png" alt="image-20201126112309105" style="zoom:33%;" />
 
+### 代码追踪
 
+具体看PPT，求和运算。
 
 
 
+### 栈顶缓存技术
 
+![image-20201126133628192](../media/pictures/JVM.assets/image-20201126133628192.png)
 
 
 
+### 动态链接
 
+![image-20201126134628582](../media/pictures/JVM.assets/image-20201126134628582.png)
 
+动态链接是栈帧里面的一个部分。
 
+动态链接指向运行时常量池的方法引用。
 
+![image-20201126150223899](../media/pictures/JVM.assets/image-20201126150223899.png)
 
+![image-20201126135014009](../media/pictures/JVM.assets/image-20201126135014009.png)
 
+示例代码
 
+```java
+public class DynamicLinkingTest {
+    int num = 10;
 
+    public DynamicLinkingTest() {
+    }
 
-## 网上面试题
+    public void methodA() {
+        System.out.println("methodA()....");
+    }
 
-参考：https://www.jianshu.com/p/573b5c6b8e89
+    public void methodB() {
+        System.out.println("methodB()....");
+        this.methodA();
+        ++this.num;
+    }
+}
+```
 
-https://blog.csdn.net/qq_41701956/article/details/100074023
 
 
+#### 字节码文件中的常量池
 
+<img src="../media/pictures/JVM.assets/image-20201126140049958.png" alt="image-20201126140049958" style="zoom: 67%;" />
 
+字节码中的方法
 
+<img src="../media/pictures/JVM.assets/image-20201126140238771.png" alt="image-20201126140238771" style="zoom:67%;" />
 
+这里面的#7，和#2就是指的上面常量池里面的值。
 
 
 
+**注意：**
 
+在加载的时候，会把这个类需要用到的东西，都加载进来，以一个符号的形式表示。
 
-## Interview
+例如：#13 表示返回值为空的，下面还有输出流等。
 
-### 1.新生代包含的区域（牛客题）
+
+
+**为什么会用这个动态链接呢？为什么不把内容直接拿过来用呢？**
+
+Java里面的好多其实都是引用，之所以用引用一来节省空间，二来好多内容可以共享。而且好多东西很大，不能都保存在字节码文件中，所以用引用的方式。
+
+
+
+### 方法的调用
+
+<img src="../media/pictures/JVM.assets/image-20201126150334306.png" alt="image-20201126150334306" style="zoom: 33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201126151820734.png" alt="image-20201126151820734" style="zoom: 33%;" />
+
+面向过程的语言，大多数在编译器就可以确定，所以是早期绑定，面向对象语言，早期晚期绑定都有。
+
+<img src="../media/pictures/JVM.assets/image-20201126152941124.png" alt="image-20201126152941124" style="zoom:33%;" />
+
+
+
+#### 虚方法和非虚方法
+
+<img src="../media/pictures/JVM.assets/image-20201207090534235.png" alt="image-20201207090534235" style="zoom: 33%;" />
+
+子类对象多态的使用前提：
+
+- 类的继承
+- 方法的重写
+
+<img src="../media/pictures/JVM.assets/image-20201207091021163.png" alt="image-20201207091021163" style="zoom:33%;" />
+
+
+
+#### invokedynamic指令
+
+<img src="../media/pictures/JVM.assets/image-20201207171617856.png" alt="image-20201207171617856" style="zoom:33%;" />
+
+##### 动态类型语言和静态类型语言
+
+<img src="../media/pictures/JVM.assets/image-20201207171940805.png" alt="image-20201207171940805" style="zoom:33%;" />
+
+
+
+Java其实是动静态类型语言（对于类型的检查在编译器）。Js，Python 动态类型语言（对类型的检查在运行期）。
+
+<img src="../media/pictures/JVM.assets/image-20201207172219469.png" alt="image-20201207172219469" style="zoom: 50%;" />
+
+
+
+**这个的增加就是为了是某些动态语言，可以运行到JVM虚拟机上面。**
+
+
+
+#### 方法重写的本质
+
+<img src="../media/pictures/JVM.assets/image-20201207174642203.png" alt="image-20201207174642203" style="zoom:33%;" />
+
+
+
+方法重写本质依次往上找，不太靠谱，所以有下面的需方法表。
+
+#### 虚方法表 
+
+<img src="../media/pictures/JVM.assets/image-20201208090140932.png" alt="image-20201208090140932" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201208090205213.png" alt="image-20201208090205213" style="zoom:33%;" />
+
+说明：下面白色的方法是Son类重写父类Father的方法，蓝色的方法是Object类的方法。如果子类Son调用toString方法，那么虚方法表回指向Object类的toString方法，直接调用Object类中的方法，不用再一层一层往上面找。
+
+
+
+虚方法表举例：
+
+```java
+/**
+ * 虚方法表的举例
+ *
+ * @author shkstart
+ * @create 2020 下午 1:11
+ */
+interface Friendly {
+    void sayHello();
+    void sayGoodbye();
+}
+class Dog {
+    public void sayHello() {
+    }
+    public String toString() {
+        return "Dog";
+    }
+}
+class Cat implements Friendly {
+    public void eat() {
+    }
+    public void sayHello() {
+    }
+    public void sayGoodbye() {
+    }
+    protected void finalize() {
+    }
+    public String toString(){
+        return "Cat";
+    }
+}
+
+class CockerSpaniel extends Dog implements Friendly {
+    public void sayHello() {
+        super.sayHello();
+    }
+    public void sayGoodbye() {
+    }
+}
+
+public class VirtualMethodTable {
+}
+```
+
+**Dog类**
+
+<img src="../media/pictures/JVM.assets/image-20201208091312096.png" alt="image-20201208091312096" style="zoom:33%;" />
+
+**CockerSpaniel（可卡犬）类**
+
+<img src="../media/pictures/JVM.assets/image-20201208091419546.png" alt="image-20201208091419546" style="zoom:33%;" />
+
+**Cat 类**
+
+<img src="../media/pictures/JVM.assets/image-20201208091543188.png" alt="image-20201208091543188" style="zoom:33%;" />
+
+
+
+### 方法返回值
+
+**返回指令包含ireturn（当返回值是boolean、byte、char、short和int类型时使用）、lreturn、freturn、dreturn以及areturn，另外还有一个return指令供声明为void的方法、实例初始化方法、类和接口的初始化方法使用。**
+
+<img src="../media/pictures/JVM.assets/image-20201208094636332.png" alt="image-20201208094636332" style="zoom:33%;" />
+
+
+
+示例
+
+<img src="../media/pictures/JVM.assets/image-20201214204631235.png" alt="image-20201214204631235" style="zoom: 67%;" />
+
+```
+  public void method2() {
+
+        methodVoid();
+
+        try {
+            method1();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+```
+
+起始 跳转 
+
+<img src="../media/pictures/JVM.assets/image-20201214204703445.png" alt="image-20201214204703445" style="zoom:50%;" />
+
+上面的4，8，11分别对应 72，75，73 行代码。就是catch语句的try包含的方法，结束}，catch所对应的行号。
+
+<img src="../media/pictures/JVM.assets/image-20201214204736164.png" alt="image-20201214204736164" style="zoom:50%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201215084715436.png" alt="image-20201215084715436" style="zoom:50%;" />
+
+### 一些附加信息
+
+![image-20201215085226184](../media/pictures/JVM.assets/image-20201215085226184.png)
+
+
+
+![image-20201215085240934](../media/pictures/JVM.assets/image-20201215085240934.png)
+
+### 常见面试题
+
+
+
+
+
+
+
+
+
+- 举例说明栈溢出情况？（StockOverFlowError）
+  - 通过-Xss设置栈的大小；OOM
+
+- 调整栈大小，就能保证不出现栈溢出的情况吗？ 不能
+  - 假如原来栈深度设置为5000，一个递归需要递归6000次，当修改栈的大小以后，修改为7000，调用原来的6000次递归可能不会出现异常，但是如果设置为5500，调用原来的6000次递归还是会出现异常。
+  - 生活中通俗的例子，假如你原来每个月500零花钱，你不够花，现在给你5000就一定够花了吗？当然不一定。
+- 分配的栈内存越大越好吗？
+  - 当然不是？这个问题就好像问每个月给你钱越多越好吗？那肯定不是，多了有很多坏处。
+  - 就拿计算机资源来说，总资源是有限的，你这个栈内存分配太大，其他资源就可用的就比较少啦。
+- 垃圾回收是否会涉及到虚拟机栈？不会？
+  - 为什么？
+- 方法中定义的局部变量是否线程安全？ 具体问题具体分析。
+
+
+
+详细参见JVMDemo中chapter05.java3.StringBuilderTest
+
+```java
+package com.atguigu.java3;
+
+/**
+ * 面试题：
+ * 方法中定义的局部变量是否线程安全？具体情况具体分析
+ * <p>
+ * 何为线程安全？
+ * 如果只有一个线程才可以操作此数据，则必是线程安全的。
+ * 如果有多个线程操作此数据，则此数据是共享数据。如果不考虑同步机制的话，会存在线程安全问题。
+ *
+ * @author shkstart
+ * @create 2020 下午 7:48
+ */
+public class StringBuilderTest {
+
+	int num = 10;
+
+	//s1的声明方式是线程安全的  个人理解：s1是这个方法内部所有，数据不是共享的
+	public static void method1() {
+		//StringBuilder:线程不安全        //StringBuffer //线程安全的，源码里面已经有Synchronized 修饰啦
+		StringBuilder s1 = new StringBuilder();
+		s1.append("a");
+		s1.append("b");
+		//...
+	}
+
+	//sBuilder的操作过程：是线程不安全的
+	public static void method2(StringBuilder sBuilder) {
+		sBuilder.append("a");
+		sBuilder.append("b");
+		//...
+	}
+
+	//s1的操作：是线程不安全的  个人理解：有返回值，会被其他线程用到
+	public static StringBuilder method3() {
+		StringBuilder s1 = new StringBuilder();
+		s1.append("a");
+		s1.append("b");
+		return s1;
+	}
+
+	// s1的操作：是线程安全的  个人理解：s1在方法中生，结束处死。点开s1的toString（）方法，里面new了一个新的String，
+	// 所以返回的并不是原来的s1，而是新的String对象
+	public static String method4() {
+		StringBuilder s1 = new StringBuilder();
+		s1.append("a");
+		s1.append("b");
+		return s1.toString();
+	}
+
+	public static void main(String[] args) {
+		StringBuilder s = new StringBuilder();
+
+		new Thread(() -> {
+			s.append("a");
+			s.append("b");
+		}).start();
+
+		method2(s);
+	}
+}
+```
+
+
+
+## 本地方法接口
+
+![image-20201215095748855](../media/pictures/JVM.assets/image-20201215095748855.png)
+
+
+
+现在学的是右下角这一部分。
+
+### 什么是本地方法
+
+<img src="../media/pictures/JVM.assets/image-20201215100001248.png" alt="image-20201215100001248" style="zoom: 33%;" />
+
+
+
+在Thread方法中，搜索native，有很多本地方法，比如setPriority0() 设置线程优先级，其实是本地方法，这些方法并没有方法体，其实方法的具体实现是在其他地方，可能不是用Java代码写的。
+
+<img src="../media/pictures/JVM.assets/image-20201215100800277.png" alt="image-20201215100800277" style="zoom: 67%;" />
+
+Java中的线程都需要转换成操作系统的本地线程来操作。其实虽然是Java多线程，其实还是需要操作系统来支持。
+
+
+
+举例：
+
+```java
+package com.atguigu.java;
+
+public class IHaveNatives {
+    public native void Native1(int x);
+    public native static long Native2();
+    private native synchronized float Native3(Object o);
+    native void Native4(int[] ary) throws Exception;
+}
+```
+
+注意：native关键字可以和其他的Java标识符连用，但是abstract除外。
+
+
+
+### 为什么要使用Native Method？
+
+<img src="../media/pictures/JVM.assets/image-20201215102809488.png" alt="image-20201215102809488" style="zoom: 33%;" />
+
+<img src="../media/pictures/JVM.assets/image-20201215102839386.png" alt="image-20201215102839386" style="zoom:33%;" />
+
+这三条解释：
+
+- 新中国刚成立，不可避免的需要与其他国家进行接触，难免会用到其他国际规范，比如美国在有一些灵玉提供了一些接口，当时我们可以直接用。
+- 与操作系统有关的，与性能有关的一些，还是需要用到。比如韩国，什么都不依靠，依靠自己（操作系统）。
+- 比如韩国，好多方面就需要美国保护，军事上等等，美国对它的影响潜移默化，不可避免要调用美国接口。
+
+
+
+### 现状
+
+<img src="../media/pictures/JVM.assets/image-20201215104155812.png" alt="image-20201215104155812" style="zoom: 33%;" />
+
+
+
+## 本地方法栈
+
+<img src="../media/pictures/JVM.assets/image-20201215114833966.png" alt="image-20201215114833966" style="zoom: 67%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201215132222544.png" alt="image-20201215132222544" style="zoom:50%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201215132242970.png" alt="image-20201215132242970" style="zoom: 33%;" />
+
+
+
+## 堆
+
+- 堆的核心概述
+- 设置堆的大小和OOM
+- 年轻代和年老代
+- 图解对象分配过程
+- Minor GC、Major GC、Full GC
+- 堆空间分代思想
+- 内存分配策略
+- 为对象分配内存：TLAB
+- 小结堆空间的参数设置
+- 堆是分配对象的唯一原则吗
+
+
+
+堆：每个进程是唯一一个堆，好多个线程共享一个进程中的堆空间。
+
+![image-20201215142606441](../media/pictures/JVM.assets/image-20201215142606441.png)
+
+一个JVM实例，代表一个进程，堆和方法区是线程共享的，程序计数器，本地方法栈，虚拟机栈是每个线程独有的。
+
+
+
+### 堆的核心概述
+
+<img src="../media/pictures/JVM.assets/image-20201215164025121.png" alt="image-20201215164025121" style="zoom: 33%;" />
+
+**注意**：物理上不连续，逻辑上是连续的。
+
+<img src="../media/pictures/JVM.assets/image-20201215164633662.png" alt="image-20201215164633662" style="zoom: 33%;" />
+
+**注意**：
+
+- Java虚拟机规范中说是all，所有的对象实例都在堆中分配内存空间。实际情况是almost(几乎所有)，有一些是在栈中分配。为什么是这样？具体待证实。
+
+- **方法结束时，栈中保存的引用会断开，堆中的对象不会被马上移除，仅仅在垃圾收集的时候才会被移除。**
+
+
+
+对应代码中chapter08中HeapDemo HeapDemo1 
+
+首先配置 每个文件的堆的大小参数：`-Xms10m -Xmx10m`
+
+新版本的Idea配置藏起来啦，需要自己弄出来。
+
+![image-20201215162636639](../media/pictures/JVM.assets/image-20201215162636639.png)
+
+把这两个demo启动以后，然后再JDK安装目录下bin目录，启动监控工具
+
+![image-20201215162832000](../media/pictures/JVM.assets/image-20201215162832000.png)
+
+
+
+启动以后，左边找到刚才的Demo，点开，右边回出现详细信息。
+
+
+
+注意：刚使用这个监控工具的时候，没有最后面三个插件，需要在工具-->>插件-->>可用插件中，来查看，点击下面安装。
+
+![image-20201215163109795](../media/pictures/JVM.assets/image-20201215163109795.png)
+
+如果这里没有这个列表，且报这个错，说明下载路径有问题。解决方案：重新选一个地址就好。
+
+参考：https://blog.csdn.net/qq_42449963/article/details/110165097
+
+<img src="../media/pictures/JVM.assets/image-20201215163335830.png" alt="image-20201215163335830" style="zoom: 50%;" />
+
+
+
+监控软件官网：https://visualvm.github.io/pluginscenters.html 
+
+每个版本，都有对应的下载路径。
+
+
+
+#### 栈 堆 方法区关系
+
+<img src="../media/pictures/JVM.assets/image-20201215170732942.png" alt="image-20201215170732942" style="zoom: 50%;" />
+
+测试：数组new放在了堆里头
+
+![image-20201215182813286](../media/pictures/JVM.assets/image-20201215182813286.png)
+
+
+
+代码
+
+```java
+package com.atguigu.java;
+
+/**
+ * @author shkstart  shkstart@126.com
+ * @create 2020  17:28
+ */
+public class SimpleHeap {
+    private int id;//属性、成员变量
+
+    public SimpleHeap(int id) {
+        this.id = id;
+    }
+
+    public void show() {
+        System.out.println("My ID is " + id);
+    }
+    public static void main(String[] args) {
+        SimpleHeap sl = new SimpleHeap(1);
+        SimpleHeap s2 = new SimpleHeap(2);
+        int[] arr = new int[10];
+        Object[] arr1 = new Object[10];
+    }
+}
+```
+
+
+
+**注意：**
+
+- 垃圾回收主要考虑的是堆空间（方法区也有垃圾回收）。栈是没有垃圾回收的。
+
+- GC会在大内存和频繁的GC中，遇到瓶颈。需要优化。
+
+
+
+#### 内存细分
+
+分代垃圾回收算法就是针对堆中分代垃圾来说的。
+
+<img src="../media/pictures/JVM.assets/image-20201215183656953.png" alt="image-20201215183656953" style="zoom: 33%;" />
+
+
+
+#### 堆空间内部结构 (JDK 7)
+
+<img src="../media/pictures/JVM.assets/image-20201215184836289.png" alt="image-20201215184836289" style="zoom: 50%;" />
+
+#### 堆空间内部结构（JDK 8）
+
+上面的永久区，换成了元空间。（这里没有图片）
+
+
+
+#### 打印GC详情日志
+
+首先需要配置一个参数（其他参数参照Guide哥文章里面） 注意参数之前有+
+
+```
+-XX:+PrintGCDetails
+```
+
+![image-20201216151507069](../media/pictures/JVM.assets/image-20201216151507069.png)
+
+配置了参数以后，运行代码结果（注意这里是JDK1.8  所以下面是元空间（Metaspace），如果是JDK1.7的话，就不是这样的，下面是方法区）：
+
+```java
+-Xms : 575M
+-Xmx : 575M
+Heap
+ PSYoungGen      total 179200K, used 12288K [0x00000000f3800000, 0x0000000100000000, 0x0000000100000000)
+  eden space 153600K, 8% used [0x00000000f3800000,0x00000000f44001b8,0x00000000fce00000)
+  from space 25600K, 0% used [0x00000000fe700000,0x00000000fe700000,0x0000000100000000)
+  to   space 25600K, 0% used [0x00000000fce00000,0x00000000fce00000,0x00000000fe700000)
+ ParOldGen       total 409600K, used 0K [0x00000000da800000, 0x00000000f3800000, 0x00000000f3800000)
+  object space 409600K, 0% used [0x00000000da800000,0x00000000da800000,0x00000000f3800000)
+ Metaspace       used 3454K, capacity 4496K, committed 4864K, reserved 1056768K
+  class space    used 382K, capacity 388K, committed 512K, reserved 1048576K
+```
+
+
+
+#### 堆空间内部结构对比
+
+![image-20201215192659341](../media/pictures/JVM.assets/image-20201215192659341.png)
+
+
+
+### 设置堆的大小和OOM
+
+<img src="../media/pictures/JVM.assets/image-20201215192853873.png" alt="image-20201215192853873" style="zoom: 40%;" />
+
+#### 设置堆大小 代码测试
+
+查看电脑默认堆的最大最小内存分配
+
+```java
+package com.atguigu.java;
+
+/**
+ * 1. 设置堆空间大小的参数
+ * -Xms 用来设置堆空间（年轻代+老年代）的初始内存大小
+ *      -X 是jvm的运行参数
+ *      ms 是memory start
+ * -Xmx 用来设置堆空间（年轻代+老年代）的最大内存大小
+ *
+ * 2. 默认堆空间的大小
+ *    初始内存大小：物理电脑内存大小 / 64
+ *             最大内存大小：物理电脑内存大小 / 4
+ * 3. 手动设置：-Xms600m -Xmx600m
+ *     开发中建议将初始堆内存和最大的堆内存设置成相同的值。
+ *
+ * 4. 查看设置的参数：方式一： jps   /  jstat -gc 进程id
+ *                  方式二：-XX:+PrintGCDetails
+ * @author shkstart  shkstart@126.com
+ * @create 2020  20:15
+ */
+public class HeapSpaceInitial {
+    public static void main(String[] args) {
+
+        //返回Java虚拟机中的堆内存总量
+        long initialMemory = Runtime.getRuntime().totalMemory() / 1024 / 1024;
+        //返回Java虚拟机试图使用的最大堆内存量
+        long maxMemory = Runtime.getRuntime().maxMemory() / 1024 / 1024;
+
+        System.out.println("-Xms : " + initialMemory + "M");
+        System.out.println("-Xmx : " + maxMemory + "M");
+
+        System.out.println("系统内存大小为：" + initialMemory * 64.0 / 1024 + "G");
+        System.out.println("系统内存大小为：" + maxMemory * 4.0 / 1024 + "G");
+
+        try {
+            Thread.sleep(1000000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+}
+
+```
+
+结果：
+
+```
+-Xms : 243M
+-Xmx : 3605M
+系统内存大小为：15.1875G
+系统内存大小为：14.08203125G
+```
+
+
+
+**注意：**
+
+- 虽然这里有最大堆内存最小堆内存之说，但是在生产环境上面，一般会将最大和最小堆内存设置成一样的值。这样避免GC以后，系统调整堆空间大小，占用系统资源。
+
+- 查看设置的参数：
+
+  - 方式一： jps   /  jstat -gc 进程id（jps 和 jstat 是jdk中的命令）
+
+   *                  方式二：-XX:+PrintGCDetails
+
+
+
+内存区域参考图：
+
+<img src="../media/pictures/JVM.assets/image-20201216153244275.png" alt="image-20201216153244275" style="zoom: 33%;" />
+
+同样是上面的代码，实际操作如下（现在JVM参数设置为：-Xms600m -Xmx600m ）：
+
+现在输出结果是：
+
+```
+-Xms : 575M
+-Xmx : 575M
+```
+
+![image-20201216152627313](../media/pictures/JVM.assets/image-20201216152627313.png)
+
+
+
+**上面从左到依次是：（前八个）**
+
+1. survivor0总共
+2.  survivor1总共 
+3. survivor0已使用（U代表use 已使用）
+4. survivor1已使用
+5. Eden总共的
+6. Eden已使用
+7. 老年代（O代表old）总共
+8. 老年代已使用
+
+
+
+**进行计算：**
+
+上面总共的可使用为：（ 25600+25600+153600+409600 ）/ 1024 = 600
+
+实际上输出的明明是575，为什么上面计算出来是600呢？
+
+（ 25600+153600+409600 ）/ 1024 = 575
+
+
+
+**总结：**
+
+实际情况是survivor两个区域，同时只有一个区域在用。这里垃圾GC算法是复制算法，所以总有一个是空的。
+
+用监控软件来看的话是很形象的。下面总有一个是空的。
+
+![image-20201216161510607](../media/pictures/JVM.assets/image-20201216161510607.png)
+
+#### OutOfMemoryError举例
+
+代码如下（内存参数设置为：-Xms600m -Xmx600m）：
+
+```java
+package com.atguigu.java;
+
+import java.util.ArrayList;
+import java.util.Random;
+
+/**
+ * -Xms600m -Xmx600m
+ * @author shkstart  shkstart@126.com
+ * @create 2020  21:12
+ */
+public class OOMTest {
+    public static void main(String[] args) {
+        ArrayList<Picture> list = new ArrayList<>();
+        while(true){
+            try {
+                Thread.sleep(20);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            list.add(new Picture(new Random().nextInt(1024 * 1024)));
+        }
+    }
+}
+
+class Picture{
+    private byte[] pixels;
+
+    public Picture(int length) {
+        this.pixels = new byte[length];
+    }
+}
+```
+
+
+
+用监控软件可以动态的看到，首先Eden满了以后，然后Old满了，然后代码就报错啦。
+
+```java
+Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
+	at com.atguigu.java.Picture.<init>(OOMTest.java:29)
+	at com.atguigu.java.OOMTest.main(OOMTest.java:20)
+```
+
+
+
+### 年轻代和老年代
+
+<img src="../media/pictures/JVM.assets/image-20201216163058798.png" alt="image-20201216163058798" style="zoom:33%;" />
+
+解释：
+
+- 《圣经》中说，上帝创建了两个人，一个叫亚当，一个叫夏娃开始都把他们放在了Eden（伊甸园）区。
+- Survivor两个区也叫from 、to区，就是复制算法一边到一边。（并不一定左边就是from，右边就是to）
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201216164256349.png" alt="image-20201216164256349" style="zoom: 50%;" />
+
+解释：下面这个参数是个比率值，就是：ratio = 老年代 / 年轻代
+
+```java
+-XX:NewRatio=2  //相当于老年代 : 年轻代 = 2 : 1
+```
+
+
+
+#### 查看老年代和年轻代的比例
+
+```bash
+jps -l
+jinfo -flag NewRatio 5156(进程号，是通过上面的命令查出来的)
+```
+
+<img src="../media/pictures/JVM.assets/image-20201216170943621.png" alt="image-20201216170943621" style="zoom: 50%;" />
+
+
+
+年轻代中 Eden和 from to区 默认比例是 8:1:1   
+
+```java
+package com.atguigu.java1;
+
+/**
+ * -Xms600m -Xmx600m
+ *
+ * -XX:NewRatio ： 设置新生代与老年代的比例。默认值是2.
+ * -XX:SurvivorRatio ：设置新生代中Eden区与Survivor区的比例。默认值是8
+ * -XX:-UseAdaptiveSizePolicy ：关闭自适应的内存分配策略  （暂时用不到）
+ * -Xmn:设置新生代的空间的大小。 （一般不设置）
+ *
+ * @author shkstart  shkstart@126.com
+ * @create 2020  17:23
+ */
+public class EdenSurvivorTest {
+    public static void main(String[] args) {
+        System.out.println("我只是来打个酱油~");
+        try {
+            Thread.sleep(1000000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+
+
+解释：
+
+- 但是实际测试过程中发现它之间的比例并不是8:1:1  而是6:1:1  
+
+- 有一个**自适应内存分配策略**，但是设置了并没有起作用，需要设置参数`-XX:SurvivorRatio=8`  这样的话，比例才是8:1:1 
+
+
+
+设置以后，测试：8:1:1 
+
+<img src="../media/pictures/JVM.assets/image-20201216173622967.png" alt="image-20201216173622967" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201217085624656.png" alt="image-20201217085624656" style="zoom:33%;" />
+
+**注意：**
+
+这里新参数 `-Xmn`用来设置新生代最大内存大小，这就有一个问题，如果这里设置啦，同时`-XX:NewRatio`也设置了，但是两个结果不统一，到底以谁的为主呢？
+
+对上述代码设置如下JVM参数：
+
+```jvm
+-Xms600m -Xmx600m -XX:NewRatio=5 -Xmn200m
+```
+
+实际结果：
+
+总共是600m，按照比例1:5，新生代应该是100m，结果是新生代是200m。说明当两者有矛盾的时候，以`-Xmn`参数为主
+
+<img src="../media/pictures/JVM.assets/image-20201217090850137.png" alt="image-20201217090850137" style="zoom:50%;" />
+
+![image-20201217085903428](../media/pictures/JVM.assets/image-20201217085903428.png)
+
+注意：中间survivor两个区，回循环（垃圾回收的时候，可能会一边复制到另一边。）
+
+
+
+### 图解对象分配过程
+
+![image-20201217092731433](../media/pictures/JVM.assets/image-20201217092731433.png)
+
+解释：
+
+- 当Eden区满的时候，才会进行YGC。没用的对象清除，绿色有用的留下放到幸存者0区。下一次如果Eden满了的话，同样的清理没用的，留下，但是有用的这一次绿色的会放到1区，依次循环。
+- Eden满了会进行YGC，那么如果幸存者区满了的话，会怎么样呢？ 会直接进入Old区。就像有些人过分优秀，直接一等功或者特等功，直接晋升超级特种兵。
+- 那么会不会没有进过Eden区，直接进入老年代呢？当然有，有些人就是含着金钥匙出来的，比如各种二代，确实和普通人不一样。
+- 后面Promotion（晋升的意思）。
+- 对象从Eden到幸存者0和1区，再到Old区。就像一个新兵蛋子，好好干晋升到排长或者晋升特种兵，后来连长或者超级特种兵，最后十年老兵（Old）基本到了这里就快要凉凉啦。（其实也像程序员，从菜鸟到精英，到35岁，到凋零。。。瞬间难过）
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201217102434293.png" alt="image-20201217102434293" style="zoom:33%;" />
+
+<img src="../media/pictures/JVM.assets/image-20201217102509276.png" alt="image-20201217102509276" style="zoom:33%;" />
+
+
+
+前辈总结：
+
+<img src="../media/pictures/JVM.assets/image-20201217102654629.png" alt="image-20201217102654629" style="zoom:33%;" />
+
+
+
+自己总结：
+
+年轻人人多，竞争激烈，一旦经历过风雨挺过去，到了老年代，公司就不会轻易动他啦，毕竟是公司元老。
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201217103558151.png" alt="image-20201217103558151" style="zoom:50%;" />
+
+
+
+```java
+package com.atguigu.java1;
+
+import java.util.ArrayList;
+import java.util.Random;
+
+/**
+ * -Xms600m -Xmx600m
+ * @author shkstart  shkstart@126.com
+ * @create 2020  17:51
+ */
+public class HeapInstanceTest {
+    byte[] buffer = new byte[new Random().nextInt(1024 * 200)];
+
+    public static void main(String[] args) {
+        ArrayList<HeapInstanceTest> list = new ArrayList<HeapInstanceTest>();
+        while (true) {
+            list.add(new HeapInstanceTest());
+            try {
+                Thread.sleep(10);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+```
+
+
+
+用监控软件实际测试发现，如果Old区满了以后，会报OutOfMemoryError。
+
+
+
+#### 常用调试工具
+
+<img src="../media/pictures/JVM.assets/image-20201217110909683.png" alt="image-20201217110909683" style="zoom:33%;" />
+
+这里用Jprofiler，电脑端用11，IDEA中用Jprofiler插件。
+
+正在安装。。。
+
+
+
+
+
+
+
+### Minor GC、Major GC、Full GC
+
+<img src="../media/pictures/JVM.assets/image-20201217111316786.png" alt="image-20201217111316786" style="zoom:33%;" />
+
+#### 最简单的分布式GC策略的触发条件
+
+<img src="../media/pictures/JVM.assets/image-20201217112958136.png" alt="image-20201217112958136" style="zoom:33%;" />
+
+解释：
+
+最后这个STW，就好像家长在收拾家，你一直在扔垃圾。这样明显不对。这时候，他会让你暂停扔垃圾，他收拾垃圾。
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201222135711610.png" alt="image-20201222135711610" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201222135801756.png" alt="image-20201222135801756" style="zoom:33%;" />
+
+<img src="../media/pictures/JVM.assets/image-20201222135828721.png" alt="image-20201222135828721" style="zoom:33%;" />
+
+
+
+自己测试：
+
+```java
+package com.atguigu.java1;
+
+import java.util.ArrayList;
+import java.util.List;
+
+/**
+ * 测试MinorGC 、 MajorGC、FullGC
+ * -Xms9m -Xmx9m -XX:+PrintGCDetails
+ * @author shkstart  shkstart@126.com
+ * @create 2020  14:19
+ */
+public class GCTest {
+    public static void main(String[] args) {
+        int i = 0;
+        try {
+            List<String> list = new ArrayList<>();
+            String a = "atguigu.com";
+            while (true) {
+                list.add(a);
+                a = a + a;
+                i++;
+            }
+
+        } catch (Throwable t) {
+            t.printStackTrace();
+            System.out.println("遍历次数为：" + i);
+        }
+    }
+}
+```
+
+输出结果：
+
+```
+[GC (Allocation Failure) [PSYoungGen: 2039K->504K(2560K)] 2039K->736K(9728K), 0.0026483 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[GC (Allocation Failure) [PSYoungGen: 2544K->504K(2560K)] 2776K->2122K(9728K), 0.0023130 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[GC (Allocation Failure) [PSYoungGen: 1981K->504K(2560K)] 3599K->2858K(9728K), 0.0019741 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[Full GC (Ergonomics) [PSYoungGen: 1256K->0K(2560K)] [ParOldGen: 6578K->4872K(7168K)] 7834K->4872K(9728K), [Metaspace: 3479K->3479K(1056768K)], 0.0201822 secs] [Times: user=0.03 sys=0.02, real=0.02 secs] 
+[GC (Allocation Failure) [PSYoungGen: 0K->0K(2560K)] 4872K->4872K(9728K), 0.0008406 secs] [Times: user=0.00 sys=0.00, real=0.00 secs] 
+[Full GC (Allocation Failure) [PSYoungGen: 0K->0K(2560K)] [ParOldGen: 4872K->4854K(7168K)] 4872K->4854K(9728K), [Metaspace: 3479K->3479K(1056768K)], 0.0157749 secs] [Times: user=0.02 sys=0.00, real=0.02 secs] 
+遍历次数为：16
+Heap
+ PSYoungGen      total 2560K, used 100K [0x00000000ffd00000, 0x0000000100000000, 0x0000000100000000)
+  eden space 2048K, 4% used [0x00000000ffd00000,0x00000000ffd191f8,0x00000000fff00000)
+  from space 512K, 0% used [0x00000000fff80000,0x00000000fff80000,0x0000000100000000)
+  to   space 512K, 0% used [0x00000000fff00000,0x00000000fff00000,0x00000000fff80000)
+ ParOldGen       total 7168K, used 4854K [0x00000000ff600000, 0x00000000ffd00000, 0x00000000ffd00000)
+  object space 7168K, 67% used [0x00000000ff600000,0x00000000ffabd910,0x00000000ffd00000)
+ Metaspace       used 3512K, capacity 4502K, committed 4864K, reserved 1056768K
+  class space    used 391K, capacity 394K, committed 512K, reserved 1048576K
+java.lang.OutOfMemoryError: Java heap space
+	at java.util.Arrays.copyOf(Arrays.java:3332)
+	at java.lang.AbstractStringBuilder.ensureCapacityInternal(AbstractStringBuilder.java:124)
+	at java.lang.AbstractStringBuilder.append(AbstractStringBuilder.java:448)
+	at java.lang.StringBuilder.append(StringBuilder.java:136)
+	at com.atguigu.java1.GCTest.main(GCTest.java:20)
+```
+
+
+
+分析：首先进行了三次年轻代的GC，而后做了一次Full GC，而后进行GC，后来又进行一次Full GC。
+
+
+
+### 堆空间分代思想
+
+<img src="../media/pictures/JVM.assets/image-20201222142432609.png" alt="image-20201222142432609" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201222142504956.png" alt="image-20201222142504956" style="zoom:33%;" />
+
+
+
+举例解释说明：
+
+比如一个小区，现在处于疫情监控中，一些已经感染的人，一些和感染者接触过的人，一些没有啥问题的人，就可以分别看成年轻代，老年代，永久代。医护人员吗，每天最需要关注的其实就是年轻代的人，每天测体温等，实时监控。老年代人，相对时间长一点检查一次就好。
+
+同样学校分班，都是便于管理，便于学习。
+
+
+
+### 内存分配策略
+
+<img src="../media/pictures/JVM.assets/image-20201222143551823.png" alt="image-20201222143551823" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201222143733896.png" alt="image-20201222143733896" style="zoom:33%;" />
+
+
+
+大对象：大的数组，或者字符串
+
+代码测试：
+
+```java
+package com.atguigu.java1;
+
+/** 测试：大对象直接进入老年代
+ * -Xms60m -Xmx60m -XX:NewRatio=2 -XX:SurvivorRatio=8 -XX:+PrintGCDetails
+ * @author shkstart  shkstart@126.com
+ * @create 2020  21:48
+ */
+public class YoungOldAreaTest {
+    public static void main(String[] args) {
+        byte[] buffer = new byte[1024 * 1024 * 20];//20m
+
+    }
+}
+```
+
+
+
+结果：
+
+```
+Heap
+ PSYoungGen      total 18432K, used 2631K [0x00000000fec00000, 0x0000000100000000, 0x0000000100000000)
+  eden space 16384K, 16% used [0x00000000fec00000,0x00000000fee91e00,0x00000000ffc00000)
+  from space 2048K, 0% used [0x00000000ffe00000,0x00000000ffe00000,0x0000000100000000)
+  to   space 2048K, 0% used [0x00000000ffc00000,0x00000000ffc00000,0x00000000ffe00000)
+ ParOldGen       total 40960K, used 20480K [0x00000000fc400000, 0x00000000fec00000, 0x00000000fec00000)
+  object space 40960K, 50% used [0x00000000fc400000,0x00000000fd800010,0x00000000fec00000)
+ Metaspace       used 3482K, capacity 4498K, committed 4864K, reserved 1056768K
+  class space    used 387K, capacity 390K, committed 512K, reserved 1048576K
+```
+
+
+
+解释：
+
+new 的大数组，20M，直接放到了老年代中，20480K
+
+
+
+### 为对象分配内存：TLAB
+
+<img src="../media/pictures/JVM.assets/image-20201222145507769.png" alt="image-20201222145507769" style="zoom:33%;" />
+
+Allocation（分配，配置）
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201222145908341.png" alt="image-20201222145908341" style="zoom:33%;" />
+
+面试问题：堆空间一定都是共享的吗？
+
+不是，每个线程有独有的TLAB。
+
+<img src="../media/pictures/JVM.assets/image-20201222150717877.png" alt="image-20201222150717877" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201222150827197.png" alt="image-20201222150827197" style="zoom:33%;" />
+
+<img src="../media/pictures/JVM.assets/image-20201222150844153.png" alt="image-20201222150844153" style="zoom:33%;" />
+
+
+
+### 堆空间的参数设置小结
+
+<img src="../media/pictures/JVM.assets/image-20201222151552126.png" alt="image-20201222151552126" style="zoom:33%;" />
+
+
+
+
+
+代码测试：
+
+查看所有的参数  用前两个参数
+
+```java
+package com.atguigu.java1;
+
+/**
+ * 测试堆空间常用的jvm参数：
+ * -XX:+PrintFlagsInitial : 查看所有的参数的默认初始值
+ * -XX:+PrintFlagsFinal  ：查看所有的参数的最终值（可能会存在修改，不再是初始值）
+ *      具体查看某个参数的指令： jps：查看当前运行中的进程
+ *                             jinfo -flag SurvivorRatio 进程id
+ *
+ * -Xms：初始堆空间内存 （默认为物理内存的1/64）
+ * -Xmx：最大堆空间内存（默认为物理内存的1/4）
+ * -Xmn：设置新生代的大小。(初始值及最大值)
+ * -XX:NewRatio：配置新生代与老年代在堆结构的占比
+ * -XX:SurvivorRatio：设置新生代中Eden和S0/S1空间的比例
+ * -XX:MaxTenuringThreshold：设置新生代垃圾的最大年龄
+ * -XX:+PrintGCDetails：输出详细的GC处理日志
+ * 打印gc简要信息：① -XX:+PrintGC   ② -verbose:gc
+ * -XX:HandlePromotionFailure：是否设置空间分配担保
+ *
+ * @author shkstart  shkstart@126.com
+ * @create 2020  17:18
+ */
+public class HeapArgsTest {
+    public static void main(String[] args) {
+
+    }
+}
+```
+
+结果：
+
+![image-20201222151900890](../media/pictures/JVM.assets/image-20201222151900890.png)
+
+
+
+解释分析：带`:=` 的，是修改过的，说明不是默认值。
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201222153101993.png" alt="image-20201222153101993" style="zoom:33%;" />
+
+<img src="../media/pictures/JVM.assets/image-20201222153736333.png" alt="image-20201222153736333" style="zoom:33%;" />
+
+解释JDK7之后，这个参数相当于写死啦，直接是True啦。这个要是写死的话，感觉会有风险。
+
+
+
+### 堆是分配对象的唯一原则吗
+
+<img src="../media/pictures/JVM.assets/image-20201222154443582.png" alt="image-20201222154443582" style="zoom:33%;" />
+
+
+
+#### 逃逸分析
+
+<img src="../media/pictures/JVM.assets/image-20201223090906729.png" alt="image-20201223090906729" style="zoom:33%;" />
+
+解析：
+
+对象在方法内部被定义，同时在内部被使用，则没有逃逸。如果对象在方法内部被定义，而在外部被引用，则认为发生逃逸。
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223091614723.png" alt="image-20201223091614723" style="zoom:33%;" />
+
+
+
+下面这个，很巧妙的一个设计，可以让对象不逃逸：
+
+<img src="../media/pictures/JVM.assets/image-20201223091635990.png" alt="image-20201223091635990" style="zoom:33%;" />
+
+
+
+逃逸分析代码：
+
+```java
+package com.atguigu.java2;
+
+/**
+ * 逃逸分析
+ *
+ * 如何快速的判断是否发生了逃逸分析，大家就看new的对象实体是否有可能在方法外被调用。
+ * @author shkstart
+ * @create 2020 下午 4:00
+ */
+public class EscapeAnalysis {
+
+    public EscapeAnalysis obj;
+
+    /*
+    方法返回EscapeAnalysis对象，发生逃逸
+     */
+    public EscapeAnalysis getInstance(){
+        return obj == null? new EscapeAnalysis() : obj;
+    }
+    /*
+    为成员属性赋值，发生逃逸
+     */
+    public void setObj(){
+        this.obj = new EscapeAnalysis();
+    }
+    //思考：如果当前的obj引用声明为static的？仍然会发生逃逸。
+
+    /*
+    对象的作用域仅在当前方法中有效，没有发生逃逸
+     */
+    public void useEscapeAnalysis(){
+        EscapeAnalysis e = new EscapeAnalysis();
+    }
+    /*
+    引用成员变量的值，发生逃逸
+     */
+    public void useEscapeAnalysis1(){
+        EscapeAnalysis e = getInstance();
+        //getInstance().xxx()同样会发生逃逸
+    }
+}
+```
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223092838102.png" alt="image-20201223092838102" style="zoom:33%;" />
+
+
+
+**结论：开关中能使用局部变量，就不要使用在方法外定义。**
+
+
+
+#### 逃逸分析 代码优化
+
+<img src="../media/pictures/JVM.assets/image-20201223101507000.png" alt="image-20201223101507000" style="zoom:33%;" />
+
+
+
+##### 栈上分配
+
+测试代码：
+
+```java
+package com.atguigu.java2;
+
+/**
+ * 栈上分配测试
+ * -Xmx1G -Xms1G -XX:-DoEscapeAnalysis -XX:+PrintGCDetails
+ */
+public class StackAllocation {
+    public static void main(String[] args) {
+        long start = System.currentTimeMillis();
+
+        for (int i = 0; i < 10000000; i++) {
+            alloc();
+        }
+        // 查看执行时间
+        long end = System.currentTimeMillis();
+        System.out.println("花费的时间为： " + (end - start) + " ms");
+        // 为了方便查看堆内存中对象个数，线程sleep
+        try {
+            Thread.sleep(1000000);
+        } catch (InterruptedException e1) {
+            e1.printStackTrace();
+        }
+    }
+
+    private static void alloc() {
+        User user = new User();//未发生逃逸
+    }
+
+    static class User {
+
+    }
+}
+
+```
+
+
+
+###### 测试（1）
+
+配置参数：（没有开启逃逸分析）
+
+```bash
+-Xmx1G -Xms1G -XX:-DoEscapeAnalysis -XX:+PrintGCDetails
+```
+
+运行结果：
+
+```
+花费的时间为： 97 ms
+```
+
+监控软件分析：
+
+![image-20201223095745075](../media/pictures/JVM.assets/image-20201223095745075.png)
+
+
+
+###### 测试（2）
+
+配置参数：（开启逃逸分析，和上面的区别是这里是+，上面是-）
+
+```bash
+-Xmx1G -Xms1G -XX:+DoEscapeAnalysis -XX:+PrintGCDetails
+```
+
+运行结果：
+
+```
+花费的时间为： 7 ms
+```
+
+监控软件分析：
+
+![image-20201223095641683](../media/pictures/JVM.assets/image-20201223095641683.png)
+
+
+
+对比两者同样创建1000万对象，时间差异很大。在内存中占用情况也不一样，开启逃逸分析以后，对象数（实例数量）明显少很多，而上面没有开启逃逸分析的情况，实例数还是1000万个。
+
+
+
+##### 同步省略（消除）
+
+<img src="../media/pictures/JVM.assets/image-20201223102245851.png" alt="image-20201223102245851" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223102453857.png" alt="image-20201223102453857" style="zoom:33%;" />
+
+解释：
+
+对于同步（加锁）来说，如果每次调用f（）方法，用到的锁hollis，都不是同一个，因为每次调用都是new的一个hollis对象，那么并没有起到同步的作用。
+
+因为锁只被这个线程使用到，并没有被其他线程使用到，编译器会优化这一部分代码，取消同步。这叫**锁消除**。
+
+
+
+代码测试：
+
+```java
+package com.atguigu.java2;
+
+/**
+ * 同步省略说明
+ */
+public class SynchronizedTest {
+    public void f() {
+        Object hollis = new Object();
+        synchronized(hollis) {
+            System.out.println(hollis);
+        }
+    }
+}
+```
+
+
+
+![image-20201223103039097](../media/pictures/JVM.assets/image-20201223103039097.png)
+
+
+
+##### 标量替换
+
+<img src="../media/pictures/JVM.assets/image-20201223103917115.png" alt="image-20201223103917115" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223103934297.png" alt="image-20201223103934297" style="zoom:33%;" />
+
+解释：上面绿色的代码，经过标量替换以后就变成了下面黄色的部分。
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223105004925.png" alt="image-20201223105004925" style="zoom:33%;" />
+
+
+
+
+
+###### 代码测试（1）
+
+参数设置：（进行逃逸分析，不进行标量替换，最后一个参数-）
+
+```bash
+-Xmx100m -Xms100m -XX:+DoEscapeAnalysis -XX:+PrintGC -XX:-EliminateAllocations
+```
+
+代码测试
+
+```java
+package com.atguigu.java2;
+
+/**
+ * 标量替换测试
+ *  -Xmx100m -Xms100m -XX:+DoEscapeAnalysis -XX:+PrintGC -XX:-EliminateAllocations
+ */
+public class ScalarReplace {
+    public static class User {
+        public int id;
+        public String name;
+    }
+
+    public static void alloc() {
+        User u = new User();//未发生逃逸
+        u.id = 5;
+        u.name = "www.atguigu.com";
+    }
+
+    public static void main(String[] args) {
+        long start = System.currentTimeMillis();
+        for (int i = 0; i < 10000000; i++) {
+            alloc();
+        }
+        long end = System.currentTimeMillis();
+        System.out.println("花费的时间为： " + (end - start) + " ms");
+    }
+}
+```
+
+
+
+结果：
+
+```bash
+[GC (Allocation Failure)  25600K->848K(98304K), 0.0027447 secs]
+[GC (Allocation Failure)  26448K->784K(98304K), 0.0015434 secs]
+[GC (Allocation Failure)  26384K->736K(98304K), 0.0016396 secs]
+[GC (Allocation Failure)  26336K->720K(98304K), 0.0012140 secs]
+[GC (Allocation Failure)  26320K->720K(98304K), 0.0014937 secs]
+[GC (Allocation Failure)  26320K->752K(101376K), 0.0014161 secs]
+[GC (Allocation Failure)  32496K->684K(101376K), 0.0011951 secs]
+[GC (Allocation Failure)  32428K->684K(100352K), 0.0007323 secs]
+花费的时间为： 96 ms
+```
+
+
+
+###### 代码测试（2）
+
+参数设置：（进行逃逸分析，进行标量替换，最后一个参数+）
+
+```bash
+Xmx100m -Xms100m -XX:+DoEscapeAnalysis -XX:+PrintGC -XX:+EliminateAllocations
+```
+
+代码：和上面一样
+
+结果：
+
+```
+花费的时间为： 10 ms
+```
+
+
+
+**对比解析：通过对比可以，进行标量替换以后，垃圾回收没有啦，时间缩短很多。**
+
+
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223110916461.png" alt="image-20201223110916461" style="zoom:33%;" />
+
+
+
+#### 逃逸分析小结
+
+<img src="../media/pictures/JVM.assets/image-20201223111116832.png" alt="image-20201223111116832" style="zoom:33%;" />
+
+最后一句话：
+
+**对象实例都是分配在堆上。**
+
+原因是Oracle Hotspot JVM并没有将这项技术用到JVM中，所以 上面那句话。（本来JVM会在栈上分配那些不会逃逸的对象，但是没用到，那就只有堆存放对象。）
+
+
+
+### 本章小结：
+
+<img src="../media/pictures/JVM.assets/image-20201223111742435.png" alt="image-20201223111742435" style="zoom:33%;" />
+
+
+
+## 方法区
+
+- 栈、堆、方法区的交互关系
+- 方法区的理解
+- 设置方法区的大小与OOM
+- 方法区的内部结构
+- 方法区使用举例
+- 方法区的演进细节
+- 方法区的垃圾回收
+- 总结
+
+
+
+### 栈、堆、方法区的交互关系
+
+#### 运行时数据区结构图
+
+![image-20201223112513091](../media/pictures/JVM.assets/image-20201223112513091.png)
+
+
+
+从线程共享与否的角度来看
+
+![image-20201223112648579](../media/pictures/JVM.assets/image-20201223112648579.png)
+
+
+
+解释：
+
+- 左边线程共享的两个堆和元空间，都会报异常OOM，也会GC。
+- 右边线程私有的部分，虚拟机栈和本地方法区会报错StackOverFlow，但是没有GC，后面的**程序计数器不会把报异常，也不存在GC**。
+- 中间ThreadLocal可以保证多个线程在并发的时候的安全性。
+
+
+
+#### 栈、堆、方法区的关系
+
+![image-20201223133439556](../media/pictures/JVM.assets/image-20201223133439556.png)
+
+
+
+
+
+
+
+reference 叫引用，实体在堆中。
+
+
+
+### 方法区的理解
+
+官方英文文档：
+
+https://docs.oracle.com/javase/specs/jvms/se8/html/jvms-2.html#jvms-2.5.4
+
+<img src="../media/pictures/JVM.assets/image-20201223135510172.png" alt="image-20201223135510172" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223140135202.png" alt="image-20201223140135202" style="zoom:33%;" />
+
+
+
+代码：
+
+```java
+package com.atguigu.java;
+
+/**
+ *  测试设置方法区大小参数的默认值
+ *
+ *  jdk7及以前：
+ *  -XX:PermSize=100m -XX:MaxPermSize=100m
+ *
+ *  jdk8及以后：
+ *  -XX:MetaspaceSize=100m  -XX:MaxMetaspaceSize=100m
+ */
+public class MethodAreaDemo {
+    public static void main(String[] args) {
+        System.out.println("start...");
+        try {
+            Thread.sleep(1000000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+
+        System.out.println("end...");
+    }
+}
+```
+
+监控解析：就上面几行代码，实际运行起来加载进来的类就有1600多个，可怕。
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223141353631.png" alt="image-20201223141353631" style="zoom:33%;" />
+
+
+
+#### Hotspot中方法区的演进
+
+<img src="../media/pictures/JVM.assets/image-20201223142751020.png" alt="image-20201223142751020" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223142906631.png" alt="image-20201223142906631" style="zoom:33%;" />
+
+
+
+#### 方法区的概述
+
+![image-20201223142817690](../media/pictures/JVM.assets/image-20201223142817690.png)
+
+
+
+### 设置方法区的大小与OOM
+
+<img src="../media/pictures/JVM.assets/image-20201223144653975.png" alt="image-20201223144653975" style="zoom:33%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20201223144820141.png" alt="image-20201223144820141" style="zoom:33%;" />
+
+由于本地是装的JDK8，所以没有PermSize两个参数。
+
+<img src="../media/pictures/JVM.assets/image-20201223144956963.png" alt="image-20201223144956963" style="zoom: 67%;" />
+
+只有下面两个参数：
+
+<img src="../media/pictures/JVM.assets/image-20201223145217692.png" alt="image-20201223145217692" style="zoom: 67%;" />
+
+
+
+进过计算器计算：21807104 / 1024 / 1024  =  20.796875 （这就是上面说的大约21M）
+
+下面的数字很大，除三个1024，算出来也很大。很大的G。这里应该不是电脑实际内存 大小。
+
+
+
+#### 测试OOM
+
+测试代码：
+
+```java
+package com.atguigu.java;
+
+import com.sun.xml.internal.ws.org.objectweb.asm.ClassWriter;
+import jdk.internal.org.objectweb.asm.Opcodes;
+
+/**
+ * 测试OOM异常
+ * jdk6/7中：
+ * -XX:PermSize=10m -XX:MaxPermSize=10m
+ * <p>
+ * jdk8中：
+ * -XX:MetaspaceSize=10m -XX:MaxMetaspaceSize=10m
+ *
+ * @author shkstart  shkstart@126.com
+ * @create 2020  22:24
+ */
+public class OOMTest extends ClassLoader {
+	public static void main(String[] args) {
+		int j = 0;
+		try {
+			OOMTest test = new OOMTest();
+			for (int i = 0; i < 10000; i++) {
+				//创建ClassWriter对象，用于生成类的二进制字节码
+				ClassWriter classWriter = new ClassWriter(0);
+				//指明版本号，修饰符，类名，包名，父类，接口
+				classWriter.visit(Opcodes.V1_6, Opcodes.ACC_PUBLIC, "Class" + i, null, "java/lang/Object", null);
+				//返回byte[]
+				byte[] code = classWriter.toByteArray();
+				//类的加载
+				test.defineClass("Class" + i, code, 0, code.length);//Class对象
+				j++;
+			}
+		} finally {
+			System.out.println(j);
+		}
+	}
+}
+```
+
+测试结果：（JDK8）
+
+```bash
+8531
+Exception in thread "main" java.lang.OutOfMemoryError: Metaspace
+	at java.lang.ClassLoader.defineClass1(Native Method)
+	at java.lang.ClassLoader.defineClass(ClassLoader.java:763)
+	at java.lang.ClassLoader.defineClass(ClassLoader.java:642)
+	at com.atguigu.java.OOMTest.main(OOMTest.java:29)
+```
+
+
+
+总结
+
+虽然JDK7和JDK8都报错OOM，但是后面显示的详细信息不一样。
+
+- JDK7 是 java.lang.OutOfMemoryError: **PermGen space**
+- JDK8 是 java.lang.OutOfMemoryError: **Metaspace**
+
+
+
+### 方法区的内部结构
+
+<img src="../media/pictures/JVM.assets/image-20210104091820545.png" alt="image-20210104091820545" style="zoom:40%;" />
+
+
+
+<img src="../media/pictures/JVM.assets/image-20210104101636051.png" alt="image-20210104101636051" style="zoom:35%;" />
+
+<img src="../media/pictures/JVM.assets/image-20210104102301622.png" alt="image-20210104102301622" style="zoom:33%;" />
+
+
+
+#### 测试方法区内部构成
+
+
+
+源代码：
+
+```java
+package com.atguigu.java;
+
+import java.io.Serializable;
+
+/**
+ * 测试方法区的内部构成
+ * @author shkstart  shkstart@126.com
+ * @create 2020  23:39
+ */
+public class MethodInnerStrucTest extends Object implements Comparable<String>,Serializable {
+    //属性
+    public int num = 10;
+    private static String str = "测试方法的内部结构";
+    //构造器
+    //方法
+    public void test1(){
+        int count = 20;
+        System.out.println("count = " + count);
+    }
+    public static int test2(int cal){
+        int result = 0;
+        try {
+            int value = 30;
+            result = value / cal;
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return result;
+    }
+
+    @Override
+    public int compareTo(String o) {
+        return 0;
+    }
+}
+```
+
+
+
+反编译：
+
+终端打开class文件
+
+<img src="../media/pictures/JVM.assets/image-20210104104912944.png" alt="image-20210104104912944" style="zoom: 67%;" />
+
+```
+javap -v -p MethodInnerStrucTest.class > test.txt (将结果重定向到text.txt中)
+```
+
+-p是将 私有属性也反编译
+
+反编译结果：
+
+```
+Classfile /D:/Study/尚硅谷JVM/JVM上篇 内存和垃圾回收/代码/JVMDemo/out/production/chapter09/com/atguigu/java/MethodInnerStrucTest.class
+  Last modified 2021-1-4; size 1626 bytes
+  MD5 checksum 0d0fcb54854d4ce183063df985141ad0
+  Compiled from "MethodInnerStrucTest.java"
+public class com.atguigu.java.MethodInnerStrucTest extends java.lang.Object implements java.lang.Comparable<java.lang.String>, java.io.Serializable
+  minor version: 0
+  major version: 52
+  flags: ACC_PUBLIC, ACC_SUPER
+Constant pool:
+   #1 = Methodref          #18.#52        // java/lang/Object."<init>":()V
+   #2 = Fieldref           #17.#53        // com/atguigu/java/MethodInnerStrucTest.num:I
+   #3 = Fieldref           #54.#55        // java/lang/System.out:Ljava/io/PrintStream;
+   #4 = Class              #56            // java/lang/StringBuilder
+   #5 = Methodref          #4.#52         // java/lang/StringBuilder."<init>":()V
+   #6 = String             #57            // count =
+   #7 = Methodref          #4.#58         // java/lang/StringBuilder.append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
+   #8 = Methodref          #4.#59         // java/lang/StringBuilder.append:(I)Ljava/lang/StringBuilder;
+   #9 = Methodref          #4.#60         // java/lang/StringBuilder.toString:()Ljava/lang/String;
+  #10 = Methodref          #61.#62        // java/io/PrintStream.println:(Ljava/lang/String;)V
+  #11 = Class              #63            // java/lang/Exception
+  #12 = Methodref          #11.#64        // java/lang/Exception.printStackTrace:()V
+  #13 = Class              #65            // java/lang/String
+  #14 = Methodref          #17.#66        // com/atguigu/java/MethodInnerStrucTest.compareTo:(Ljava/lang/String;)I
+  #15 = String             #67            // 测试方法的内部结构
+  #16 = Fieldref           #17.#68        // com/atguigu/java/MethodInnerStrucTest.str:Ljava/lang/String;
+  #17 = Class              #69            // com/atguigu/java/MethodInnerStrucTest
+  #18 = Class              #70            // java/lang/Object
+  #19 = Class              #71            // java/lang/Comparable
+  #20 = Class              #72            // java/io/Serializable
+  #21 = Utf8               num
+  #22 = Utf8               I
+  #23 = Utf8               str
+  #24 = Utf8               Ljava/lang/String;
+  #25 = Utf8               <init>
+  #26 = Utf8               ()V
+  #27 = Utf8               Code
+  #28 = Utf8               LineNumberTable
+  #29 = Utf8               LocalVariableTable
+  #30 = Utf8               this
+  #31 = Utf8               Lcom/atguigu/java/MethodInnerStrucTest;
+  #32 = Utf8               test1
+  #33 = Utf8               count
+  #34 = Utf8               test2
+  #35 = Utf8               (I)I
+  #36 = Utf8               value
+  #37 = Utf8               e
+  #38 = Utf8               Ljava/lang/Exception;
+  #39 = Utf8               cal
+  #40 = Utf8               result
+  #41 = Utf8               StackMapTable
+  #42 = Class              #63            // java/lang/Exception
+  #43 = Utf8               compareTo
+  #44 = Utf8               (Ljava/lang/String;)I
+  #45 = Utf8               o
+  #46 = Utf8               (Ljava/lang/Object;)I
+  #47 = Utf8               <clinit>
+  #48 = Utf8               Signature
+  #49 = Utf8               Ljava/lang/Object;Ljava/lang/Comparable<Ljava/lang/String;>;Ljava/io/Serializable;
+  #50 = Utf8               SourceFile
+  #51 = Utf8               MethodInnerStrucTest.java
+  #52 = NameAndType        #25:#26        // "<init>":()V
+  #53 = NameAndType        #21:#22        // num:I
+  #54 = Class              #73            // java/lang/System
+  #55 = NameAndType        #74:#75        // out:Ljava/io/PrintStream;
+  #56 = Utf8               java/lang/StringBuilder
+  #57 = Utf8               count =
+  #58 = NameAndType        #76:#77        // append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
+  #59 = NameAndType        #76:#78        // append:(I)Ljava/lang/StringBuilder;
+  #60 = NameAndType        #79:#80        // toString:()Ljava/lang/String;
+  #61 = Class              #81            // java/io/PrintStream
+  #62 = NameAndType        #82:#83        // println:(Ljava/lang/String;)V
+  #63 = Utf8               java/lang/Exception
+  #64 = NameAndType        #84:#26        // printStackTrace:()V
+  #65 = Utf8               java/lang/String
+  #66 = NameAndType        #43:#44        // compareTo:(Ljava/lang/String;)I
+  #67 = Utf8               测试方法的内部结构
+  #68 = NameAndType        #23:#24        // str:Ljava/lang/String;
+  #69 = Utf8               com/atguigu/java/MethodInnerStrucTest
+  #70 = Utf8               java/lang/Object
+  #71 = Utf8               java/lang/Comparable
+  #72 = Utf8               java/io/Serializable
+  #73 = Utf8               java/lang/System
+  #74 = Utf8               out
+  #75 = Utf8               Ljava/io/PrintStream;
+  #76 = Utf8               append
+  #77 = Utf8               (Ljava/lang/String;)Ljava/lang/StringBuilder;
+  #78 = Utf8               (I)Ljava/lang/StringBuilder;
+  #79 = Utf8               toString
+  #80 = Utf8               ()Ljava/lang/String;
+  #81 = Utf8               java/io/PrintStream
+  #82 = Utf8               println
+  #83 = Utf8               (Ljava/lang/String;)V
+  #84 = Utf8               printStackTrace
+{
+  public int num;
+    descriptor: I
+    flags: ACC_PUBLIC
+
+  private static java.lang.String str;
+    descriptor: Ljava/lang/String;
+    flags: ACC_PRIVATE, ACC_STATIC
+
+  public com.atguigu.java.MethodInnerStrucTest();
+    descriptor: ()V
+    flags: ACC_PUBLIC
+    Code:
+      stack=2, locals=1, args_size=1
+         0: aload_0
+         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
+         4: aload_0
+         5: bipush        10
+         7: putfield      #2                  // Field num:I
+        10: return
+      LineNumberTable:
+        line 10: 0
+        line 12: 4
+      LocalVariableTable:
+        Start  Length  Slot  Name   Signature
+            0      11     0  this   Lcom/atguigu/java/MethodInnerStrucTest;
+
+  public void test1();
+    descriptor: ()V
+    flags: ACC_PUBLIC
+    Code:
+      stack=3, locals=2, args_size=1
+         0: bipush        20
+         2: istore_1
+         3: getstatic     #3                  // Field java/lang/System.out:Ljava/io/PrintStream;
+         6: new           #4                  // class java/lang/StringBuilder
+         9: dup
+        10: invokespecial #5                  // Method java/lang/StringBuilder."<init>":()V
+        13: ldc           #6                  // String count =
+        15: invokevirtual #7                  // Method java/lang/StringBuilder.append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
+        18: iload_1
+        19: invokevirtual #8                  // Method java/lang/StringBuilder.append:(I)Ljava/lang/StringBuilder;
+        22: invokevirtual #9                  // Method java/lang/StringBuilder.toString:()Ljava/lang/String;
+        25: invokevirtual #10                 // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+        28: return
+      LineNumberTable:
+        line 17: 0
+        line 18: 3
+        line 19: 28
+      LocalVariableTable:
+        Start  Length  Slot  Name   Signature
+            0      29     0  this   Lcom/atguigu/java/MethodInnerStrucTest;
+            3      26     1 count   I
+
+  public static int test2(int);
+    descriptor: (I)I
+    flags: ACC_PUBLIC, ACC_STATIC
+    Code:
+      stack=2, locals=3, args_size=1
+         0: iconst_0
+         1: istore_1
+         2: bipush        30
+         4: istore_2
+         5: iload_2
+         6: iload_0
+         7: idiv
+         8: istore_1
+         9: goto          17
+        12: astore_2
+        13: aload_2
+        14: invokevirtual #12                 // Method java/lang/Exception.printStackTrace:()V
+        17: iload_1
+        18: ireturn
+      Exception table:
+         from    to  target type
+             2     9    12   Class java/lang/Exception
+      LineNumberTable:
+        line 21: 0
+        line 23: 2
+        line 24: 5
+        line 27: 9
+        line 25: 12
+        line 26: 13
+        line 28: 17
+      LocalVariableTable:
+        Start  Length  Slot  Name   Signature
+            5       4     2 value   I
+           13       4     2     e   Ljava/lang/Exception;
+            0      19     0   cal   I
+            2      17     1 result   I
+      StackMapTable: number_of_entries = 2
+        frame_type = 255 /* full_frame */
+          offset_delta = 12
+          locals = [ int, int ]
+          stack = [ class java/lang/Exception ]
+        frame_type = 4 /* same */
+
+  public int compareTo(java.lang.String);
+    descriptor: (Ljava/lang/String;)I
+    flags: ACC_PUBLIC
+    Code:
+      stack=1, locals=2, args_size=2
+         0: iconst_0
+         1: ireturn
+      LineNumberTable:
+        line 33: 0
+      LocalVariableTable:
+        Start  Length  Slot  Name   Signature
+            0       2     0  this   Lcom/atguigu/java/MethodInnerStrucTest;
+            0       2     1     o   Ljava/lang/String;
+
+  public int compareTo(java.lang.Object);
+    descriptor: (Ljava/lang/Object;)I
+    flags: ACC_PUBLIC, ACC_BRIDGE, ACC_SYNTHETIC
+    Code:
+      stack=2, locals=2, args_size=2
+         0: aload_0
+         1: aload_1
+         2: checkcast     #13                 // class java/lang/String
+         5: invokevirtual #14                 // Method compareTo:(Ljava/lang/String;)I
+         8: ireturn
+      LineNumberTable:
+        line 10: 0
+      LocalVariableTable:
+        Start  Length  Slot  Name   Signature
+            0       9     0  this   Lcom/atguigu/java/MethodInnerStrucTest;
+
+  static {};
+    descriptor: ()V
+    flags: ACC_STATIC
+    Code:
+      stack=1, locals=0, args_size=0
+         0: ldc           #15                 // String 测试方法的内部结构
+         2: putstatic     #16                 // Field str:Ljava/lang/String;
+         5: return
+      LineNumberTable:
+        line 13: 0
+}
+Signature: #49                          // Ljava/lang/Object;Ljava/lang/Comparable<Ljava/lang/String;>;Ljava/io/Serializable;
+SourceFile: "MethodInnerStrucTest.java"
+
+```
+
+
+
+### 方法区使用举例
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 方法区的演进细节
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 方法区的垃圾回收
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 总结
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# Interview
+
+## 1.新生代包含的区域（牛客题）
 
 **Java** **中的堆是** **JVM** **所管理的最**大的一块内存空间，主要用于存放各种类的实例对象。
 
@@ -800,7 +2971,7 @@ https://blog.csdn.net/qq_41701956/article/details/100074023
 
  从图中可以看出： 堆大小 = 新生代 + 老年代。其中，堆的大小可以通过参数 –Xms、-Xmx 来指定。
 
-### 2.JMM（Java内存模型（Java Memory Model）
+## 2.JMM（Java内存模型（Java Memory Model）
 
 JMM就是一种符合内存模型规范的，屏蔽了各种硬件和操作系统的访问差异的，保证了Java程序在各种平台下对内存的访问都能保证效果一致的机制及规范。
 
@@ -828,7 +2999,7 @@ volatile变量的写-读可以实现线程之间的通信。
 
 简答内存模型的时候，最好再答上内存区域。有些面试官也没分清楚。
 
-### 3.下面有关java内存模型的描述，说法错误的是？（没搞清 然后看看）
+## 3.下面有关java内存模型的描述，说法错误的是？（没搞清 然后看看）
 
 正确答案: D   你的答案: B (错误)
 
@@ -841,11 +3012,11 @@ D、如果在一个线程构造了一个不可变对象之后（对象仅包含f
 
 
 
-### 4.垃圾回收算法
+## 4.垃圾回收算法
 
 ![1591857119826](../media/pictures/JVM.assets/1591857119826.png)
 
-#### 3.1 标记-清除算法
+### 3.1 标记-清除算法
 
 该算法分为“标记”和“清除”阶段：首先标记出所有需要回收的对象，在标记完成后统一回收所有被标记的对象。它是最基础的收集算法，后续的算法都是对其不足进行改进得到。这种垃圾收集算法会带来两个明显的问题：
 
@@ -853,19 +3024,19 @@ D、如果在一个线程构造了一个不可变对象之后（对象仅包含f
 2. **空间问题（标记清除后会产生大量不连续的碎片）**
 3. ![1591857144703](../media/pictures/JVM.assets/1591857144703.png)
 
-#### 3.2 复制算法
+### 3.2 复制算法
 
 为了解决效率问题，“复制”收集算法出现了。它可以将内存分为大小相同的两块，每次使用其中的一块。当这一块的内存使用完后，就将还存活的对象复制到另一块去，然后再把使用的空间一次清理掉。这样就使每次的内存回收都是对内存区间的一半进行回收。
 
 ![1591857163981](../media/pictures/JVM.assets/1591857163981.png)
 
-#### 3.3 标记-整理算法
+### 3.3 标记-整理算法
 
 根据老年代的特点提出的一种标记算法，标记过程仍然与“标记-清除”算法一样，但后续步骤不是直接对可回收对象回收，而是让所有存活的对象向一端移动，然后直接清理掉端边界以外的内存。
 
 ![标记-整理算法 ](../media/pictures/JVM.assets/94057049.jpg)
 
-#### 3.4 分代收集算法
+### 3.4 分代收集算法
 
 当前虚拟机的垃圾收集都采用分代收集算法，这种算法没有什么新的思想，只是根据对象存活周期的不同将内存分为几块。一般将 java 堆分为新生代和老年代，这样我们就可以根据各个年代的特点选择合适的垃圾收集算法。
 
@@ -875,7 +3046,7 @@ D、如果在一个线程构造了一个不可变对象之后（对象仅包含f
 
 根据上面的对分代收集算法的介绍回答。
 
-### 4 垃圾收集器
+## 4 垃圾收集器
 
 ![1591857226271](../media/pictures/JVM.assets/1591857226271.png)
 
@@ -981,7 +3152,7 @@ G1 收集器的运作大致分为以下几个步骤：
 
 
 
-### 5.JVM内存区域
+## 5.JVM内存区域
 
 Java 虚拟机在执行 Java 程序的过程中会把它管理的内存划分成若干个不同的数据区域。JDK. 1.8 和之前的版本略有不同，下面会介绍到。
 
@@ -1187,7 +3358,7 @@ JDK1.4 中新加入的 **NIO(New Input/Output) 类**，引入了一种基于**�
 
 
 
-### 6、JVM调优（GC调优）
+## 6、JVM调优（GC调优）
 
 首先列举常见参数：
 
@@ -1287,7 +3458,7 @@ https://blog.csdn.net/Javazhoumou/article/details/99298624
 
 
 
-### 7.新生代怎么变成年轻代
+## 7.新生代怎么变成年轻代
 
 也叫新生代，顾名思义，主要是用来存放新生的对象。新生代又细分为 Eden区、SurvivorFrom区、SurvivorTo区。
 
@@ -1310,7 +3481,7 @@ Minor GC操作后，Eden区如果仍然存活（判断的标准是被引用了�
 
 
 
-### 8.Java会出现内存泄漏吗，什么情况下会出现？
+## 8.Java会出现内存泄漏吗，什么情况下会出现？
 
 当然会出现内存泄露。
 
@@ -1426,7 +3597,7 @@ this.a=a;
 
 
 
-### 9.GC如何搜索到需要回收的对象？如何判断哪些对象需要回收？
+## 9.GC如何搜索到需要回收的对象？如何判断哪些对象需要回收？
 
 ![](../media/pictures/JVM.assets/11034259.jpg)
 
@@ -1448,7 +3619,7 @@ this.a=a;
 
 
 
-### 10.JAVA内存区域 堆和栈上存储什么
+## 10.JAVA内存区域 堆和栈上存储什么
 
 堆内存是用来存放由new创建的对象实例和数组。**此内存区域的唯一目的就是存放对象实例，几乎所有的对象实例以及数组都在这里分配内存。**
 
@@ -1470,7 +3641,7 @@ this.a=a;
 
 
 
-### 11.GC Roots可以是哪些对象？
+## 11.GC Roots可以是哪些对象？
 
 （能够直接从外部访问的对象）可以和Java内存区域合起来记忆。
 
@@ -1484,13 +3655,13 @@ this.a=a;
 
 
 
-### 12.JVM内存区域，哪些是线程私有？
+## 12.JVM内存区域，哪些是线程私有？
 
 虚拟机栈，本地方法栈，程序计数器。
 
 
 
-### 13.Java 对象的创建过程（五步，建议能默写出来并且要知道每一步虚拟机做了什么）
+## 13.Java 对象的创建过程（五步，建议能默写出来并且要知道每一步虚拟机做了什么）
 
 下图便是 Java 对象的创建过程，我建议最好是能默写出来，并且要掌握每一步在做什么。
 
@@ -1531,13 +3702,13 @@ this.a=a;
 
 
 
-### 14.对象的访问定位：
+## 14.对象的访问定位：
 
 句柄，直接指针。
 
 
 
-### 15.String类和常量池
+## 15.String类和常量池
 
 **String 对象的两种创建方式：**
 
@@ -1614,7 +3785,7 @@ true
 
 
 
-### 16.如何实现小内存，排序大文件？只用2GB内存在20亿个整数中找到出现次数最多的数？
+## 16.如何实现小内存，排序大文件？只用2GB内存在20亿个整数中找到出现次数最多的数？
 
 用哈希函数分小，再找。
 
@@ -1624,7 +3795,7 @@ true
 
 
 
-### 17.如何设置jvm创建的堆内存的大小？
+## 17.如何设置jvm创建的堆内存的大小？
 
 -Xmx：最大堆大小
 
@@ -1632,7 +3803,7 @@ true
 
 
 
-### 18.八种基本类型包装类
+## 18.八种基本类型包装类
 
 **Java 基本类型的包装类的大部分都实现了常量池技术，即 Byte,Short,Integer,Long,Character,Boolean；前面 4 种包装类默认创建了数值[-128，127] 的相应类型的缓存数据，Character创建了数值在[0,127]范围的缓存数据，Boolean 直接返回True Or False。如果超出对应范围仍然会去创建新的对象。** 为啥把缓存设置为[-128，127]区间？（[参见issue/461](https://github.com/Snailclimb/JavaGuide/issues/461)）性能和资源之间的权衡。
 
@@ -1734,7 +3905,7 @@ i4=i5+i6   true
 
 
 
-### 19.堆 （垃圾回收器管理的主要区域）
+## 19.堆 （垃圾回收器管理的主要区域）
 
 Java 虚拟机所管理的内存中最大的一块，Java 堆是所有线程共享的一块内存区域，在虚拟机启动时创建。**此内存区域的唯一目的就是存放对象实例，几乎所有的对象实例以及数组都在这里分配内存。**
 
@@ -1756,7 +3927,7 @@ JDK 8 版本之后方法区（HotSpot 的永久代）被彻底移除了（JDK1.7
 
 
 
-### 19.商用垃圾回收算法中的分代收集算法中如何确定一个对象属于新生代还是老年代？
+## 19.商用垃圾回收算法中的分代收集算法中如何确定一个对象属于新生代还是老年代？
 
 #### 对象优先在 eden 区分配
 
@@ -1790,3 +3961,57 @@ JDK 8 版本之后方法区（HotSpot 的永久代）被彻底移除了（JDK1.7
 
 
 个人博客写过这个。（是参考一篇博客写的）
+
+
+
+## 20.描述一下JVM加载class文件的原理机制
+
+
+
+## 21.String对象可以改变吗，为什么？
+
+
+
+牛客20201221选择题
+
+错误的是（C）
+
+```java
+A 程序计数器是一个比较小的内存区域，用于指示当前线程所执行的字节码执行到了第几行，是线程隔离的
+B 虚拟机栈描述的是Java方法执行的内存模型，用于存储局部变量，操作数栈，动态链接，方法出口等信息，是线程隔离的
+C 方法区用于存储JVM加载的类信息、常量、静态变量、以及编译器编译后的代码等数据，是线程隔离的
+D 原则上讲，所有的对象都在堆区上分配内存，是线程之间共享的
+```
+
+解释：方法区和堆，都是线程共享的。
+
+大多数 JVM 将内存区域划分为 **Method Area（Non-Heap）（方法区）** ,**Heap（堆）** , **Program Counter Register（程序计数器）** ,  **VM Stack（虚拟机栈，也有翻译成JAVA 方法栈的）,Native Method Stack** （ **本地方法栈** ），其中**Method Area** 和 **Heap** 是线程共享的 **VM Stack，Native Method Stack 和\*\*Program Counter Register** 是非线程共享的。为什么分为 线程共享和非线程共享的呢?请继续往下看。
+
+首先我们熟悉一下一个一般性的 Java 程序的工作过程。一个 Java 源程序文件，会被编译为字节码文件（以 class 为扩展名），每个java程序都需要运行在自己的JVM上，然后告知 JVM 程序的运行入口，再被 JVM 通过字节码解释器加载运行。那么程序开始运行后，都是如何涉及到各内存区域的呢？
+
+概括地说来，JVM初始运行的时候都会分配好 **Method Area（方法区）** 和**Heap（堆）** ，而JVM 每遇到一个线程，就为其分配一个 **Program Counter Register（程序计数器）** ,  **VM Stack（虚拟机栈）和Native Method Stack （本地方法栈），** 当线程终止时，三者（虚拟机栈，本地方法栈和程序计数器）所占用的内存空间也会被释放掉。这也是为什么我把内存区域分为线程共享和非线程共享的原因，非线程共享的那三个区域的生命周期与所属线程相同，而线程共享的区域与JAVA程序运行的生命周期相同，所以这也是系统垃圾回收的场所只发生在线程共享的区域（实际上对大部分虚拟机来说知发生在Heap上）的原因。
+
+
+
+## 22.类加载相关
+
+### **类加载的过程**
+
+类从被加载到JVM中开始，到卸载为止，整个生命周期包括：加载、验证、准备、解析、初始化、使用和卸载七个阶段。其中**类加载过程包括加载、验证、准备、解析和初始化五个阶段**。
+
+![img](../media/pictures/JVM.assets/105211344671.png)
+
+\4. 从类加载到方法执行的执行顺序？
+
+\5. 为什么类对象能避免重复加载？(双亲委派)加载类对象是先从自己的类中进行加载，还是从父类中进行加载？(父类)
+
+解释java内存中栈（stack），堆（heap）及方法区（method area）的用法？
+
+
+
+# 网上面试题
+
+参考：https://www.jianshu.com/p/573b5c6b8e89
+
+https://blog.csdn.net/qq_41701956/article/details/100074023
+
